// fork from https://github.com/grpc/grpc/blob/master/examples/protos/helloworld.proto
// 
// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "./protos";

/////////////// Thoses fields are equal to table of database

message Recommendation {
  uint64 uid = 1;
  string promotion_messages = 101;
  int64 timestamp = 1000;
}

/////////////// RecommendationServ 

service RecommendationServ {
  rpc GetRecommendation(GetRecommendationReq) returns (GetRecommendationRep) {}
}

message GetRecommendationReq {
  string token = 1;
}

message GetRecommendationRep {
  int32 status = 1;                       // 0 = successed, 1 = failed ... 
  string reason = 2;                      // reason for status
  repeated Recommendation list = 3;
}
