syntax = "proto3";
option go_package = "./protos";

/////////////// Thoses fields are equal to table of database

message User {
  uint64 uid = 1;
  string email = 101;
  string password_hashed = 102;
  int32 confirm = 103;
  int64 timestamp = 1000;
}

/////////////// RegServ

service RegServ {
  // use plain email, password to accquire AuthedUser
  rpc Reg(RegReq) returns (RegRep) {}
  rpc Confirm(ConfirmReq) returns (ConfirmRep) {}
}

message RegReq {
  string email = 1;
  string password = 2;
}

message RegRep {
  int32 status = 1;                       // 0 = successed, 1 = failed ... 
  string reason = 2;                      // reason for status
  string confirm_link = 3;
}

message ConfirmReq {
  string email = 1;
}

message ConfirmRep {
  int32 status = 1;                       // 0 = successed, 1 = failed ... 
  string reason = 2;                      // reason for status
}
